--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,13 @@ executors:
     docker:
       - image: cimg/node:20.5.0
 
+commands:
+  prepare-slack:
+    steps:
+      - run: echo "Preparing Slack"
+      - run: echo "export CYPRESS=$(cat .circleci/slack-notifications-templates/CYPRESS.json)" >> $BASH_ENV
+
+
 jobs:  
   notify-slack:
     executor: node
@@ -16,175 +23,9 @@ jobs:
       - checkout
       - run: npm ci
       - run: echo "Notifying Slack"
+      - run: echo "export CYPRESS=$(cat .circleci/slack-notifications-templates/CYPRESS.json)" >> $BASH_ENV
       - slack/notify:
-          custom: |
-            {
-              "attachments": [
-                {
-                  "blocks": [
-                    {
-                      "type": "section",
-                      "text": {
-                        "type": "mrkdwn",
-                        "text": "🏁 Run finished"
-                      },
-                      "accessory": {
-                        "type": "button",
-                        "text": {
-                          "type": "plain_text",
-                          "text": "View Job in CircleCI"
-                        },
-                        "url": "https://google.com",
-                        "action_id": "button-action"
-                      }
-                    },
-                    {
-                      "type": "context",
-                      "elements": [
-                        {
-                          "type": "plain_text",
-                          "text": "Run Duration: 9m 40s"
-                        }
-                      ]
-                    },
-                    {
-                      "type": "rich_text",
-                      "elements": [
-                        {
-                          "type": "rich_text_section",
-                          "elements": [
-                            {
-                              "type": "text",
-                              "text": "Project:",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "text",
-                              "text": " Planable-app-visual\n"
-                            },
-                            {
-                              "type": "text",
-                              "text": "Branch:",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "text",
-                              "text": " fix/P-7125-tooltip\n"
-                            },
-                            {
-                              "type": "text",
-                              "text": "Commit: ",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "emoji",
-                              "name": "ladybug",
-                              "unicode": "1f41e"
-                            },
-                            {
-                              "type": "text",
-                              "text": " Isolate the css fix\n\n"
-                            },
-                            {
-                              "type": "text",
-                              "text": "Overall Tests: 120",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "text",
-                              "text": "\n"
-                            },
-                            {
-                              "type": "emoji",
-                              "name": "large_green_circle",
-                              "unicode": "1f7e2",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "text",
-                              "text": " Passed: 95",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "text",
-                              "text": "\n"
-                            },
-                            {
-                              "type": "emoji",
-                              "name": "white_circle",
-                              "unicode": "26aa",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "text",
-                              "text": "️ Ignored: 5",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "text",
-                              "text": "\n"
-                            },
-                            {
-                              "type": "emoji",
-                              "name": "red_circle",
-                              "unicode": "1f534",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "text",
-                              "text": " Failed: 15",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "text",
-                              "text": "\n"
-                            },
-                            {
-                              "type": "emoji",
-                              "name": "large_purple_circle",
-                              "unicode": "1f7e3",
-                              "style": {
-                                "bold": true
-                              }
-                            },
-                            {
-                              "type": "text",
-                              "text": " Flaky: 5",
-                              "style": {
-                                "bold": true
-                              }
-                            }
-                          ]
-                        }
-                      ]
-                    },
-                    {
-                      "type": "divider"
-                    }
-                  ]
-                }
-              ]
-            }
+          template: CYPRESS
           event: always
 
 
