--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ commands:
   prepare-slack:
     steps:
       - run: echo "Preparing Slack"
-      - run: echo "CYPRESS=$(cat .circleci/slack-notifications/templates/CYPRESS.json)" >> $BASH_ENV
+      - run: echo 'export CYPRESS=$(jq -c . .circleci/slack-notifications/templates/CYPRESS.json)' >> $BASH_ENV
 
 jobs:  
   notify-slack:
