--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,30 +15,78 @@ commands:
       - run: echo "Preparing Slack"
       - run: echo 'export CYPRESS=$(jq -c . .circleci/slack-notifications/templates/CYPRESS.json)' >> $BASH_ENV
       - run: echo 'export MASTER_FAILURE=$(jq -c . .circleci/slack-notifications/templates/MASTER_FAILURE.json)' >> $BASH_ENV
+      - run: echo 'export JOB_FAILED=$(jq -c . .circleci/slack-notifications/templates/JOB_FAILED.json)' >> $BASH_ENV
 
 jobs:  
-  notify-slack:
+  test-job-1:
     executor: node
     steps:
       - checkout
-      - run: npm ci
       - run: echo "Notifying Slack"
-      - prepare-slack
-      - run: echo $BASH_ENV
-      - slack/notify:
-          template: CYPRESS
-          # event: always
+  
+  test-job-2:
+    executor: node
+    steps:
+      - checkout
+      - run: echo "Notifying Slack"
 
-
+  test-job-3:
+    executor: node
+    steps:
+      - checkout
+      - run: echo "Running job-level2"
+  
+  test-job-1-level-2:
+    executor: node
+    steps:
+      - checkout
+      - run: echo "Running job-level2"
+  
+  test-job-2-level-2:
+    executor: node
+    steps:
+      - checkout
+      - run: echo "Running job-level2"
 
 workflows:
   run-stuff:
     jobs:
-      - notify-slack:
+      - test-job-1:
           context: SLACK
           post-steps:
+            - prepare-slack
             - slack/notify:
-                template: MASTER_FAILURE
+                template: JOB_FAILED
                 event: always
-    
-
+      - test-job-2:
+          context: SLACK
+          post-steps:
+            - prepare-slack
+            - slack/notify:
+                template: JOB_FAILED
+                event: always
+      - test-job-3:
+          context: SLACK
+          post-steps:
+            - prepare-slack
+            - slack/notify:
+                template: JOB_FAILED
+                event: always
+      - test-job-1-level-2:
+          context: SLACK
+          requires:
+            - test-job-1
+          post-steps:
+            - prepare-slack
+            - slack/notify:
+                template: JOB_FAILED
+                event: always
+      - test-job-2-level-2:
+          context: SLACK
+          requires:
+            - test-job-2
+          post-steps:
+            - prepare-slack
+            - slack/notify:
+                template: JOB_FAILED
+                event: always
