--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,29 @@
 version: 2.1
 
-executors:
-  node:
-    resource_class: small
-    docker:
-      - image: cimg/node:20.5.0
+# this allows you to use CircleCI's dynamic configuration feature
+setup: true
 
-jobs:  
-  test-job-1:
-    executor: node
-    steps:
-      - checkout
-      - run: echo "Running test-job-1"
-      
+# the path-filtering orb is required to continue a pipeline based on
+# the path of an updated fileset
+orbs:
+  path-filtering: circleci/path-filtering@0.1.1
 
 workflows:
-  workflow1:
+  # the always-run workflow is always triggered, regardless of the pipeline parameters.
+  always-run:
     jobs:
-      - test-job-1
+      # the path-filtering/filter job determines which pipeline
+      # parameters to update.
+      - path-filtering/filter:
+          name: check-updated-files
+          # 3-column, whitespace-delimited mapping. One mapping per
+          # line:
+          # <regex path-to-test> <parameter-to-set> <value-of-pipeline-parameter>
+          mapping: |
+            test/.* run-build-service-1-job true
+          base-revision: main
+          # this is the path of the configuration we should trigger once
+          # path filtering and pipeline parameter value updates are
+          # complete. In this case, we are using the parent dynamic
+          # configuration itself.
+          config-path: .circleci/main.yml
