--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           command: |
             echo '{ "further": true, "other_param": "a_string" }' > /home/circleci/parameters.json
       - continuation/continue:
-          configuration_path: .circleci/main_processed.yml
+          configuration_path: .circleci/main.yml
 
 
 workflows:
