👌 With param path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
             echo '{ "further": true, "other_param": "a_string" }' > /home/circleci/parameters.json
       - continuation/continue:
           configuration_path: .circleci/main.yml
+          parameters: /home/circleci/parameters.json
 
 
 workflows:
